# Elecrow_70

./: .cproject  .project  README.md  sdkconfig  sdkconfig.old
SQURE/: SquareLine_Project.sll  SquareLine_Project.spj  elecrow.sll  elecrow.spj  elecrow_events.py
SQURE/export/: ui.c  ui_Screen1.c
SQURE/export/3d_printer/: .project  lv_conf.h
SQURE/export/3d_printer/lv_drivers/: .cproject  .project
SQURE/export/3d_printer/lvgl/: .cproject
SQURE/export/3d_printer/ui/: .cproject  .project  CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_Screen_1_Print.c  ui_Screen_2_Move.c  ui_Screen_3_Setting.c  ui_comp_hook.c  ui_events.h  ui_font_Small_Font.c  ui_helpers.c  (+30 more)
main/: .cproject  CMakeLists.txt  CMakeLists.txt.bak  idf_component.yml  rgb_lcd_example_main.c  rgb_lcd_example_main.c.bak
main/ui/: .cproject  .project  CMakeLists.txt  filelist.txt  filelist.txt.bak  ui.c  ui.c.bak  ui.h  ui_CurrentsMonitorScreen.c  ui_FridgeHidroControlScreen.c  ui_FuseMonitorScreen.c  ui_LampControlScreen.c  ui_PopupScreen.c  ui_RGBLampScreen.c  ui_Screen1.c  ui_Screen2.c  ui_Screen_1_Print.c  ui_Screen_1_Print.c.bak  ui_Screen_2_Move.c  ui_Screen_2_Move.c.bak  ui_Screen_3_Setting.c  ui_Screen_3_Setting.c.bak  ui_comp_hook.c  ui_events.c  ui_events.h  ui_font_Leddisplay16.c  ui_font_Leddisplay20.c  ui_font_Leddisplay30.c  ui_font_Leddisplay50.c  ui_font_fontmontserrat26.c  ui_font_fontmontserrat26.c.bak  ui_helpers.c  ui_helpers.h  ui_img_1521626150.c  ui_img_1590672063.c  ui_img_3d_printer_bg_png.c  ui_img_439896971.c  ui_img_86249921.c  ui_img_arrow_down_png.c  ui_img_arrow_left_png.c  (+167 more)
(+2 files in other folders)
